tests/compiler_errors/name_redefinitions/const_redef_mem.tlp
reserve foo 1 end
const foo 1 end 